# libVOX

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: id.h  libvox.h  vox.h
include/chunk/: chunk.h  layr.h  main.h  matl.h  ngrp.h  node.h  nshp.h  ntrn.h  pack.h  rgba.h  size.h  xyzi.h
include/node/: group.h  node.h  shape.h  transform.h
source/: libvox.cpp  vox.cpp
source/chunk/: layr.cpp  main.cpp  matl.cpp  ngrp.cpp  nshp.cpp  ntrn.cpp  pack.cpp  rgba.cpp  size.cpp  xyzi.cpp
source/node/: group.cpp  shape.cpp  transform.cpp
